zed hot-reload works now; scheme had errors :(

--- a/.config/zed/settings.json
+++ b/.config/zed/settings.json
@@ -110,7 +110,7 @@
         "dock": "right",
         "indent_size": 20
     },
-    "relative_line_numbers": true,
+    "relative_line_numbers": "enabled",
     "scrollbar": {
         "show": "never"
     },
