noctalia scheming adapted according to caelestia

--- a/.config/noctalia/Z790E-settings.json
+++ b/.config/noctalia/Z790E-settings.json
@@ -350,7 +350,7 @@
         "wezterm": false
     },
     "ui": {
-        "fontDefault": "Monaspace Krypton Medium",
+        "fontDefault": "Monaspace Krypton SemiBold",
         "fontDefaultScale": 1,
         "fontFixed": "Monaspace Krypton",
         "fontFixedScale": 1,
@@ -381,12 +381,12 @@
             {
                 "directory": "/home/toni/DotfilesData/backgrounds",
                 "name": "DP-1",
-                "wallpaper": "/home/toni/Wallpaper/bonefire-night.jpg"
+                "wallpaper": "/home/toni/Wallpaper/ayanami.png"
             },
             {
                 "directory": "/home/toni/DotfilesData/backgrounds",
                 "name": "DP-3",
-                "wallpaper": "/home/toni/Wallpaper/bonefire-night.jpg"
+                "wallpaper": "/home/toni/Wallpaper/ayanami.png"
             }
         ],
         "overviewEnabled": false,
