--- a/.config/sddm/hyprland.conf
+++ b/.config/sddm/hyprland.conf
@@ -32,8 +32,18 @@ decoration {
 }
 
 
+input {
+    kb_layout = us
+    kb_variant =
+    kb_model =
+    kb_options = compose:ralt, ctrl:nocaps
+    kb_rules =
+    repeat_delay = 250
+    repeat_rate = 50
+}
+
+
 misc {
     disable_autoreload = false
     disable_hyprland_logo = true
 }
-
