small changes accumulated over time

--- a/.config/hypr/conf.d/autostart.conf
+++ b/.config/hypr/conf.d/autostart.conf
@@ -15,8 +15,8 @@
 # exec-once = hyprpaper
 # exec-once = hypridle
 
-exec-once = gnome-keyring-daemon --start --components=secrets || $NOTIFY_ERROR "gnome-keyring-daemon could not be started."
-exec-once = systemctl --user start hyprpolkitagent || $NOTIFY_ERROR "hyprpolkitagent could not be started."
+exec-once = gnome-keyring-daemon --restart --components=secrets || $NOTIFY_ERROR "gnome-keyring-daemon could not be started."
+exec-once = systemctl --user restart hyprpolkitagent || $NOTIFY_ERROR "hyprpolkitagent could not be started."
 
 
 # ------------------------------------------------------------
@@ -59,3 +59,5 @@ exec = openrgb -d "$(openrgb -l | awk -F': ' '/Razer Leviathan V2 X/{print $1; e
 # Focus right monitor on a two monitor setting with the
 # right one being the primary monitor.
 exec-once = hyprctl dispatch workspace 1
+
+exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
