--- a/.config/hypr/conf.d/themes.conf
+++ b/.config/hypr/conf.d/themes.conf
@@ -3,23 +3,29 @@
 # of GTK and Qt, applying the theme is disabled.
 
 
-# $THEME_PACKAGE = gtk-theme-material-black
-# $THEME_NAME = Material-Black-Blueberry-LA
+$THEME_PACKAGE = gtk-theme-material-black
+$THEME_NAME = Material-Black-Blueberry-LA
 
 
 $ICON_PACKAGE = win11-icon-theme-git
-# $ICON_NAME = Win11
+$ICON_NAME = Win11
 
 
-$CURSOR_PACKAGE = rose-pine-cursor
-$CURSOR_NAME = BreezeX-RosePine-Linux
+# $CURSOR_PACKAGE = rose-pine-cursor
+# $CURSOR_NAME = BreezeX-RosePine-Linux
+$CURSOR_PACKAGE = bibata-cursor-theme-bin
+$CURSOR_NAME = Bibata-Modern-Ice
 
 
-$HYPR_CURSOR_PACKAGE = rose-pine-hyprcursor
-$HYPR_CURSOR_NAME = rose-pine-hyprcursor
+# $HYPR_CURSOR_PACKAGE = rose-pine-hyprcursor
+# $HYPR_CURSOR_NAME = rose-pine-hyprcursor
+$HYPR_CURSOR_PACKAGE = bibata-cursor-theme-bin # Modern; Orignal >> Amber; Classic; Ice
+$HYPR_CURSOR_NAME = Bibata-Modern-Ice
+
+# INFO: hyprctl setcursor Bibata-Modern-Ice 24
 
 
-$CURSOR_SIZE = 32
+$CURSOR_SIZE = 24
 
 
 $FONT_PACKAGE = otf-monaspace
@@ -40,9 +46,9 @@ env = HYPRCURSOR_SIZE, $CURSOR_SIZE
 env = HYPRCURSOR_THEME, $HYPR_CURSOR_NAME
 
 
-# exec-once = $HOME/.config/hypr/scripts/theme.sh \
-#     $THEME_NAME \
-#     $ICON_NAME \
-#     $CURSOR_NAME \
-#     $CURSOR_SIZE \
-#     $FONT
+exec-once = $HOME/.config/hypr/scripts/theme.sh \
+    $THEME_NAME \
+    $ICON_NAME \
+    $CURSOR_NAME \
+    $CURSOR_SIZE \
+    $FONT
