--- a/.config/sddm/hyprland.conf
+++ b/.config/sddm/hyprland.conf
@@ -4,7 +4,13 @@ monitor = desc:ASUSTek COMPUTER INC ROG XG27UQR R4LMQS097007,disable
 monitor = desc:ASUSTek COMPUTER INC PG27UQR R7LMQS169187,highres@highr,auto-right,2.0
 
 
-env = HYPRCURSOR_SIZE,32
+env = XCURSOR_THEME,Bibata-Modern-Ice
+env = XCURSOR_SIZE,24
+env = HYPRCURSOR_THEME,Bibata-Modern-Ice
+env = HYPRCURSOR_SIZE,24
+
+exec = hyprctl setcursor Bibata-Modern-Ice 24
+exec = gsettings set org.gnome.desktop.interface cursor-theme 'Bibata-Modern-Ice'
 
 
 animations {
