--- a/.config/zed/settings.json
+++ b/.config/zed/settings.json
@@ -1,166 +1,180 @@
 {
-    "active_pane_modifiers": {
-        "border_size": 2.0
+  "disable_ai": false,
+  "active_pane_modifiers": {
+    "border_size": 2.0
+  },
+  "agent": {
+    "default_model": {
+      "model": "gpt-5.2",
+      "provider": "openai"
     },
-    "agent": {
-        "default_model": {
-            "model": "gpt-5",
-            "provider": "openai"
+    "enabled": true,
+    "inline_assistant_model": {
+      "model": "gpt-5.2",
+      "provider": "openai"
+    },
+    "model_parameters": [],
+    "play_sound_when_agent_done": true
+  },
+  "base_keymap": "VSCode",
+  "bottom_dock_layout": "full",
+  "buffer_font_family": "Monaspace Krypton",
+  "buffer_font_size": 16,
+  "centered_layout": {
+    "left_padding": 0.2,
+    "right_padding": 0.2
+  },
+  "collaboration_panel": {
+    "button": false
+  },
+  "cursor_blink": true,
+  "diagnostics": {
+    "include_warnings": false,
+    "inline": {
+      "enabled": true,
+      "max_severity": null,
+      "min_column": 0,
+      "padding": 4,
+      "update_debounce_ms": 150
+    }
+  },
+  "experimental.theme_overrides": {
+    //     "error.background": "#8d3250",
+    //     "hint.background": "#333a50",
+    "players": [
+      {
+        "background": "#0f0f0f",
+        "cursor": "#FF6767",
+        "selection": "#8d3250"
+      }
+    ],
+    "syntax": {
+      "comment": {
+        "font_style": "italic"
+      },
+      "comment.doc": {
+        "font_style": "italic"
+      }
+    }
+  },
+  "features": {
+    "edit_prediction_provider": "none"
+  },
+  "git": {
+    "git_gutter": "tracked_files",
+    "inline_blame": {
+      "enabled": true
+    }
+  },
+  "git_panel": {
+    "button": true,
+    "dock": "right"
+  },
+  "icon_theme": "Material Icon Theme",
+  "indent_guides": {
+    "active_line_width": 1,
+    "background_coloring": "disabled",
+    "coloring": "fixed",
+    "enabled": true,
+    "line_width": 1
+  },
+  "inlay_hints": {
+    "enabled": true
+  },
+  "languages": {
+    "Python": {
+      "code_actions_on_format": {},
+      "format_on_save": "on",
+      "language_servers": ["pyright", "ruff"]
+    },
+    "JSON": {
+      "tab_size": 2,
+      "hard_tabs": false
+    },
+    "JSONC": {
+      "tab_size": 2,
+      "hard_tabs": false
+    },
+    "QML": {
+      "tab_size": 2,
+      "hard_tabs": false,
+      "format_on_save": "off"
+    }
+  },
+  "lsp": {
+    "pyright": {
+      "settings": {
+        "python": {
+          "pythonPath": ".venv/bin/python"
         },
-        "enabled": true,
-        "inline_assistant_model": {
-            "model": "gpt-5",
-            "provider": "openai"
-        },
-        "model_parameters": [],
-        "play_sound_when_agent_done": true
-    },
-    "base_keymap": "VSCode",
-    "bottom_dock_layout": "full",
-    "buffer_font_family": "Monaspace Krypton",
-    "buffer_font_size": 16,
-    "centered_layout": {
-        "left_padding": 0.2,
-        "right_padding": 0.2
-    },
-    "collaboration_panel": {
-        "button": false
-    },
-    "cursor_blink": true,
-    "diagnostics": {
-        "include_warnings": false,
-        "inline": {
-            "enabled": true,
-            "max_severity": null,
-            "min_column": 0,
-            "padding": 4,
-            "update_debounce_ms": 150
+        "python.analysis": {
+          "diagnosticMode": "workspace",
+          "typeCheckingMode": "basic"
         }
-    },
-    "experimental.theme_overrides": {
-        //     "error.background": "#8d3250",
-        //     "hint.background": "#333a50",
-        "players": [
-            {
-                "background": "#0f0f0f",
-                "cursor": "#FF6767",
-                "selection": "#8d3250"
-            }
-        ],
-        "syntax": {
-            "comment": {
-                "font_style": "italic"
-            },
-            "comment.doc": {
-                "font_style": "italic"
-            }
-        }
-    },
-    "features": {
-        "edit_prediction_provider": "none"
-    },
-    "git": {
-        "git_gutter": "tracked_files",
-        "inline_blame": {
-            "enabled": true
-        }
-    },
-    "git_panel": {
-        "button": true,
-        "dock": "right"
-    },
-    "icon_theme": "Material Icon Theme",
-    "indent_guides": {
-        "active_line_width": 1,
-        "background_coloring": "disabled",
-        "coloring": "fixed",
-        "enabled": true,
-        "line_width": 1
-    },
-    "inlay_hints": {
-        "enabled": true
-    },
-    "languages": {
-        "Python": {
-            "code_actions_on_format": {},
-            "format_on_save": "on",
-            "language_servers": ["pyright", "ruff"]
-        }
-    },
-    "lsp": {
-        "pyright": {
-            "settings": {
-                "python": {
-                    "pythonPath": ".venv/bin/python"
-                },
-                "python.analysis": {
-                    "diagnosticMode": "workspace",
-                    "typeCheckingMode": "basic"
-                }
-            }
-        }
-    },
-    "lsp_document_colors": "background",
-    "outline_panel": {
-        "button": false
-    },
-    "preferred_line_length": 120,
-    "project_panel": {
-        "button": true,
-        "dock": "right",
-        "indent_size": 20
-    },
-    "relative_line_numbers": "enabled",
-    "scrollbar": {
-        "show": "never"
-    },
-    "show_wrap_guides": true,
-    "status_bar": {
-        "active_language_button": true
-    },
-    "tab_bar": {
-        "show": true,
-        "show_nav_history_buttons": false
-    },
-    "tab_size": 4,
-    "tabs": {
-        "file_icons": true,
-        "git_status": true
-    },
-    "telemetry": {
-        "diagnostics": false,
-        "metrics": false
-    },
-    "terminal": {
-        "copy_on_select": true,
-        "cursor_shape": "bar",
-        "font_family": "Monaspace Krypton",
-        "shell": {
-            "program": "zsh"
-        }
-    },
-    "theme": {
-        "dark": "Caelestia",
-        "light": "Caelestia",
-        "mode": "system"
-    },
-    "title_bar": {
-        "show_branch_icon": true,
-        "show_menus": false,
-        "show_onboarding_banner": false,
-        "show_project_items": true
-    },
-    "ui_font_family": "Monaspace Krypton",
-    "ui_font_size": 16,
-    "use_autoclose": false,
-    "use_system_window_tabs": false,
-    "vertical_scroll_margin": 8,
-    "vim": {
-        "default_mode": "normal",
-        "highlight_on_yank_duration": 150,
-        "use_smartcase_find": true,
-        "use_system_clipboard": "always"
-    },
-    "vim_mode": true,
-    "wrap_guides": [120]
+      }
+    }
+  },
+  "lsp_document_colors": "background",
+  "outline_panel": {
+    "button": false
+  },
+  "preferred_line_length": 120,
+  "project_panel": {
+    "button": true,
+    "dock": "right",
+    "indent_size": 20
+  },
+  "relative_line_numbers": "enabled",
+  "scrollbar": {
+    "show": "never"
+  },
+  "show_wrap_guides": true,
+  "status_bar": {
+    "active_language_button": true
+  },
+  "tab_bar": {
+    "show": true,
+    "show_nav_history_buttons": false
+  },
+  "tab_size": 4,
+  "tabs": {
+    "file_icons": true,
+    "git_status": true
+  },
+  "telemetry": {
+    "diagnostics": false,
+    "metrics": false
+  },
+  "terminal": {
+    "copy_on_select": true,
+    "cursor_shape": "bar",
+    "font_family": "Monaspace Krypton",
+    "shell": {
+      "program": "zsh"
+    }
+  },
+  "theme": {
+    "dark": "Caelestia",
+    "light": "Caelestia",
+    "mode": "system"
+  },
+  "title_bar": {
+    "show_branch_icon": true,
+    "show_menus": false,
+    "show_onboarding_banner": false,
+    "show_project_items": true
+  },
+  "ui_font_family": "Monaspace Krypton",
+  "ui_font_size": 16,
+  "use_autoclose": false,
+  "use_system_window_tabs": false,
+  "vertical_scroll_margin": 8,
+  "vim": {
+    "default_mode": "normal",
+    "highlight_on_yank_duration": 150,
+    "use_smartcase_find": true,
+    "use_system_clipboard": "always"
+  },
+  "vim_mode": true,
+  "wrap_guides": [120]
 }
