hyprland config adapted to 0.53

--- a/.config/hypr/conf.d/keybinds.conf
+++ b/.config/hypr/conf.d/keybinds.conf
@@ -46,8 +46,8 @@ binds {
     # ============================================================
     # SHORTCUTS / UTILITIES
     # ============================================================
-    $PLAYER_SETTINGS = [noinitialfocus; float; size 35% 35%; move 60% 5%; monitor 1; pin]
-    $KITTY_SETTINGS = [float; size 35% 35%; move 60% 5%; monitor 1; pin]
+    $PLAYER_SETTINGS = [noinitialfocus; float; size monitor_w*0.35 monitor_h*0.35; move monitor_w*0.60 monitor_h*0.05; monitor 1; pin]
+    $KITTY_SETTINGS = [float; size monitor_w*0.35 monitor_h*0.35; move monitor_w*0.60 monitor_h*0.05; monitor 1; pin]
 
     # Start updating
     bind = CTRL_ALT, U, exec, $KITTY_SETTINGS \
