--- a/.config/hypr/conf.d/windowrules.conf
+++ b/.config/hypr/conf.d/windowrules.conf
@@ -1,26 +1,29 @@
 
 windowrules {
     # Pinned windows `SUPER+P` (first = active, second = inactive)
-    windowrulev2 = bordercolor rgb($error) rgb($error), pinned:1
+    windowrule = match:pin true, border_color rgb($primary_paletteKeyColor) rgb($primary_paletteKeyColor)
+
 
     # Portal file pickers (GTK & KDE)
-    windowrulev2 = float,  class:^(xdg-desktop-portal-gtk)$
-    windowrulev2 = center, class:^(xdg-desktop-portal-gtk)$
-    windowrulev2 = float,  class:^(xdg-desktop-portal-kde)$
-    windowrulev2 = center, class:^(xdg-desktop-portal-kde)$
+    windowrule = match:class xdg-desktop-portal-gtk, float true
+    windowrule = match:class xdg-desktop-portal-gtk, center true
+    windowrule = match:class xdg-desktop-portal-kde, float true
+    windowrule = match:class xdg-desktop-portal-kde, center true
 
     # Generic “dialog-like” titles
-    windowrulev2 = float,  title:^(Open|Save|Save As|Choose|Select|Export|Import)(.*)$
-    windowrulev2 = center, title:^(Open|Save|Save As|Choose|Select|Export|Import)(.*)$
+    windowrule = match:title ^(Open|Save|Save As|Choose|Select|Export|Import)(.*)$, float true
+    windowrule = match:title ^(Open|Save|Save As|Choose|Select|Export|Import)(.*)$, center true
 
-    windowrulev2 = workspace 3, class:^(?i)dev.zed.Zed$
-    windowrulev2 = workspace 4, class:^(?i)steam$
-    windowrulev2 = workspace 4, title:^(?i)TeamSpeak$
-    windowrulev2 = workspace 4, title:^(?i)Discord$
-    windowrulev2 = workspace 5, class:^(?i)spotify$
+    # Programs to workspace
+    windowrule = match:class ^(?i)dev.zed.Zed$, workspace 3
+    windowrule = match:class ^(?i)steam$, workspace 4
+    windowrule = match:class ^(?i)teamspeak-client$, workspace 4
+    windowrule = match:class ^(?i)Discord|Vesktop$, workspace 4
+    windowrule = match:class ^(?i)spotify$, workspace 5
 
-    windowrulev2 = float, class:^thunar$
-    windowrulev2 = tile, class:^Thunar$
+    # Thunar
+    windowrule = match:class ^thunar$, float true
+    windowrule = match:class ^Thunar$, tile true
     # …except the main Thunar window
-    windowrulev2 = tile, class:^thunar$, title:.*Thunar.*
+    windowrule = match:class ^thunar$, match:title .*Thunar.*, tile true
 }
