--- a/.config/hypr/conf.d/settings.conf
+++ b/.config/hypr/conf.d/settings.conf
@@ -28,7 +28,7 @@ misc {
     force_default_wallpaper = -1
     vfr = true
     animate_manual_resizes = true
-    new_window_takes_over_fullscreen = 2
+    # new_window_takes_over_fullscreen = 2
 }
 
 
@@ -38,6 +38,6 @@ xwayland {
 }
 
 
-experimental {
-    xx_color_management_v4 = true
-}
+# experimental {
+#     xx_color_management_v4 = true
+# }
